--- a/styles/media.css
+++ b/styles/media.css
@@ -4,10 +4,10 @@
     height: initial;
   }
 
-  .user-circle {
+  /*.user-circle {
     height: 40px;
     width: 40px;
-  }
+  }*/
 
   .main-content {
     height: calc(100vh - 80px);
@@ -195,20 +195,21 @@
 
   .greet {
     left: 0;
-    background-color: #f6f7f8;
+    background-color: #F6F7F8;
     width: 100%;
-    height: 85vh;
+    height: 84vh;
     position: fixed;
-    top: 82px;
-    z-index: 1000;
     opacity: 1;
-    animation: easeOut 2s ease-out 2s forwards;
+    top: 82px;
+    z-index: 1000; 
+    animation: easeOut 2s ease 2s forwards;
     pointer-events: none;
     text-align: center;
     display: flex;
     align-items: center;
     justify-content: center;
-  }
+    flex-direction: column;
+}
 
   @keyframes easeOut {
     0% {
@@ -259,35 +260,6 @@
   .contact-side p {
     font-size: 20px;
   }
-    .greet {
-        left: 0;
-        background-color: #F6F7F8;
-        width: 100%;
-        height: 78%;
-        position: fixed;
-        opacity: 1;
-        top: 82px;
-        z-index: 1000; 
-        animation: easeOut 2s ease 2s forwards;
-        pointer-events: none;
-        text-align: center;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-    }
-
-    @keyframes easeOut {
-        0% {
-            opacity: 1;
-            visibility: visible;
-        }
-       
-        100% {
-            opacity: 0;
-            visibility: visible;
-        }
-    }
 
   .contact-dialog-logo {
     display: none;
@@ -349,10 +321,10 @@
     height: auto;
   }
 
-  .main{
+ /* .main{
     height: initial;
   }
-}
+} */
 
 @media (max-width: 1300px) {
   .add-task-forms {
@@ -702,4 +674,5 @@
     #addTask > span{
       text-align: center;
     }
+}
 }
