--- a/styles/log-in.css
+++ b/styles/log-in.css
@@ -372,9 +372,8 @@ button {
     }
 
     .log-in-main {
-        height: 926px;
         gap: 0;
-        margin-top: 6rem;
+        margin-top: 15rem;
     }
 
 
@@ -443,9 +442,8 @@ button {
     }
 
     .log-in-main {
-        height: 926px;
         gap: 0;
-        margin-top: 6rem;
+        margin-top: 15rem;
     }
 
 
@@ -527,11 +525,9 @@ button {
     }
 
     .log-in-main {
-        height: 926px;
         gap: 0;
-        margin-top: 1rem;
+        margin-top: 5rem;
     }
-
 
     .login-title img {
         width: 101px;
@@ -602,6 +598,10 @@ button {
     padding: 4px;
     font-size: 16px;
     }
+
+    .footer {
+        margin-top: 8rem;
+    }
 }
 
 @media (max-width: 459px) and (min-width: 400px) {
@@ -624,9 +624,8 @@ button {
     }
 
     .log-in-main {
-        height: 926px;
         gap: 0;
-        margin-top: 5rem;
+        margin-top: 3rem;
     }
 
     .login-title h1 {
@@ -722,9 +721,8 @@ button {
     }
 
     .log-in-main {
-        height: 926px;
         gap: 0;
-        margin-top: 5rem;
+        margin-top: 3rem;
     }
 
     .login-title h1 {
@@ -803,7 +801,6 @@ button {
 @media (max-width: 360px) {
     .container-log-in {
         width: auto;
-        
     }
 
     .input-box {
@@ -811,7 +808,7 @@ button {
     }
 
     .input-log-in {
-        width: 320px;
+        width: 284px;
     }
 }
 
