--- a/styles/add-task.css
+++ b/styles/add-task.css
@@ -209,6 +209,7 @@ input[type="date"] {
   left: 0;
   border-radius: 0 0 10px 10px;
   overflow-y: scroll;
+  overflow-x: hidden;
   display: flex;
   flex-direction: column;
   gap: 5px;
