--- a/styles/add-task.css
+++ b/styles/add-task.css
@@ -200,7 +200,7 @@ input[type="date"] {
 }
 
 .assign-options {
-  width: 440px;
+  width: 100%;
   height: 260px;
   position: absolute;
   z-index: 3;
