--- a/styles/summery.css
+++ b/styles/summery.css
@@ -453,23 +453,20 @@
       .user-menu {
         height: 205px;
         right: 0;
+        animation: slideIn 0.3s forwards;
+        opacity: 0;
       }
 
-      /*.user-menu {
-        position: fixed;
-        top: 84px;
-        right: 0;
-        display: flex;
-        flex-direction: column;
-        z-index: 1000;
-        transform: translateX(300px);
-        transition: transform 0.3s ease;
-        height: 205px;
-    }
-    
-    .user-menu.open {
-        transform: translateX(1px); 
-    }*/
+      @keyframes slideIn {
+        0% {
+          transform: translateX(100%); 
+          opacity: 0;
+        }
+        100% {
+          transform: translateX(0); 
+          opacity: 1;
+        }
+      }
 }
 
 @media (max-width: 900px) {
