--- a/assets/templates/add-task-template.html
+++ b/assets/templates/add-task-template.html
@@ -28,7 +28,7 @@
                 placeholder="Enter a title"
                 required
               />
-              <div id="required-title" class="required d-none">
+              <div id="required-title" class="required opacity-0">
                 This field is required
               </div>
             </div>
@@ -86,7 +86,7 @@
                 name="due-date"
                 id="due-date"
               />
-              <div id="required-due-date" class="required d-none">
+              <div id="required-due-date" class="required opacity-0">
                 This field is required
               </div>
             </div>
@@ -213,7 +213,7 @@
                   <div>User Story</div>
                 </div>
               </div>
-              <div id="required-category" class="required d-none">
+              <div id="required-category" class="required opacity-0">
                 This field is required
               </div>
             </div>
