--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ button:hover {
   margin: 0 auto;
   width: 100%;
   max-width: 1440px;
-  height: 100vh;
+  height: 1024px;
 }
 
 .menu-content {
