--- a/style.css
+++ b/style.css
@@ -105,6 +105,8 @@ button:hover {
   width: 100%;
   max-width: 1440px;
   height: 1024px;
+  overflow-y: hidden;
+  position: relative;
 }
 
 .menu-content {
