fixed some design bugs

--- a/assets/templates/add-task-template.html
+++ b/assets/templates/add-task-template.html
@@ -66,7 +66,7 @@
                     </div>
                   </div>
                 </div>
-                <div id="assign-options" class="assign-options d-none"></div>
+                <div id="assign-options" class="assign-options box-shadow d-none"></div>
               </div>
               <div id="initials-container" class="initials-container"></div>
             </div>
@@ -206,7 +206,7 @@
 
                 <div
                   id="category-options"
-                  class="category-options d-none"
+                  class="category-options box-shadow d-none"
                   onclick="selectCategory(event)"
                 >
                   <div>Technical Task</div>
@@ -262,7 +262,7 @@
               type="button"
               onclick="createTask()"
             >
-              Create a Task <img src="../assets/img/check.svg" alt="" />
+              Create Task <img src="../assets/img/check.svg" alt="" />
             </button>
           </div>
         </div>
