--- a/styles/media.css
+++ b/styles/media.css
@@ -104,14 +104,14 @@
   }
 
   @keyframes slideIn {
-  0% {
-    transform: translateX(100%); 
-    opacity: 0;
-  }
-  100% {
-    transform: translateX(0); 
-    opacity: 1;
-  }
+    0% {
+      transform: translateX(100%);
+      opacity: 0;
+    }
+    100% {
+      transform: translateX(0);
+      opacity: 1;
+    }
   }
 
   .padding-add-task {
@@ -146,19 +146,19 @@
     position: relative;
   }
 
-  .overlay {
+  /* .overlay {
     top: calc(0% + 80px);
     height: calc(100vh - 160px);
-  }
+  } */
 
   .contact-dialog {
     height: 100% !important;
     width: 95%;
   }
 
-  .input-group{
-        height: 41px;
-    }
+  .input-group {
+    height: 41px;
+  }
 
   .contact-side {
     height: 300px;
@@ -379,7 +379,7 @@
     display: none !important;
   }
 
-  .assign-options-container{
+  .assign-options-container {
     margin-bottom: 24px;
   }
 }
@@ -524,9 +524,6 @@
 }
 
 @media (max-width: 500px) {
-  /*   input {
-    width: 390px !important;
-  } */
 
   textarea {
     width: 390px !important;
@@ -636,6 +633,10 @@
 }
 
 @media (max-width: 400px) {
+  .prio-buttons {
+    flex-direction: column;
+  }
+  
   .first-form {
     width: 100%;
   }
@@ -691,3 +692,9 @@
   }
 }
 
+@media (max-width: 600px) {
+  .dialog-edit-task {
+    width: 100%;
+    height: 90%;
+  }
+}
