--- a/styles/add-task.css
+++ b/styles/add-task.css
@@ -261,7 +261,7 @@ input[type="date"] {
 }
 
 .rendered-options-container > input[type="checkbox"]{
-  appearance: none; 
+  appearance: none !important; 
   border: 1px solid black; 
   outline: none;
 }
