--- a/styles/edit-task.css
+++ b/styles/edit-task.css
@@ -52,7 +52,7 @@ ul {
   font-weight: 400;
 }
 
-.dialog-edit-task input {
+.dialog-edit-task input[type="text"] {
   padding: 12px 16px;
   width: 100%;
   border: 1px solid #d1d1d1;
@@ -74,7 +74,7 @@ ul {
   flex-direction: column;
   gap: 24px;
   padding-right: 16px;
-  height: 100%;
+  height: 85%;
 }
 
 .dialog-edit-task-subtasks {
