--- a/styles/add-task.css
+++ b/styles/add-task.css
@@ -272,7 +272,7 @@ input[type="date"] {
 }
 
 .rendered-options-container > input[type="checkbox"]:checked::before{
-  content: "✓";
+  /*content: "✓";*/
   position: absolute;
   height: 20px;
   width: 20px;
@@ -284,7 +284,7 @@ input[type="date"] {
 }
 
 .rendered-options-container > input[type="checkbox"]:checked::after{
-  content: "/";
+  /*content: "/";*/
   rotate: 31deg;
   height: 20px;
   width: 20px;
