--- a/styles/summary.css
+++ b/styles/summary.css
@@ -494,7 +494,7 @@
         left: 0;
         background-color: #F6F7F8;
         width: 100%;
-        height: 77vh;
+        height: calc(100vh - 96px - 80px);
         position: fixed;
         opacity: 1;
         top: 82px;
