--- a/styles/summary.css
+++ b/styles/summary.css
@@ -474,6 +474,7 @@
         height: 205px;
         right: 0;
         animation: slideIn 0.3s forwards;
+        top: 82px;
         opacity: 0;
       }
 
