--- a/styles/media.css
+++ b/styles/media.css
@@ -1,4 +1,8 @@
 @media (max-width: 800px) {
+  .dialog-edit-task {
+    width: 80% !important;
+  }
+
   .container {
     flex-direction: column-reverse;
     height: initial;
@@ -387,6 +391,10 @@
 
 @media (max-width: 1250px) {
 
+  .dialog-edit-task {
+    width: 60%;
+  }
+
   .contacts-header-wrap {
     flex-direction: column;
     align-items: flex-start;
@@ -704,7 +712,7 @@
 
 @media (max-width: 600px) {
   .dialog-edit-task {
-    width: 100%;
+    width: 100% !important;
     height: 90%;
   }
 }
