--- a/styles/add-task.css
+++ b/styles/add-task.css
@@ -372,6 +372,7 @@ input[id="subtasks"] {
   height: 90%;
   overflow-y: auto;
   padding-right: 20px;
+  margin-bottom: 24px;
 }
 
 .prio-buttons-container {
