--- a/styles/add-task.css
+++ b/styles/add-task.css
@@ -542,7 +542,7 @@ input[id="subtasks"] {
 
 .subtasks-container {
   position: absolute;
-  width: 440px;
+  width: 100%;
   height: 120px;
   left: 0;
   top: calc(0% + 60px);
