fixed max width

--- a/styles/board.css
+++ b/styles/board.css
@@ -17,6 +17,7 @@
   justify-content: space-between;
   align-items: center;
   padding-bottom: 55px;
+  max-width: 1920px;
 }
 
 .board-header-utilities {
@@ -91,6 +92,7 @@
 .board-content {
   display: flex;
   justify-content: space-between;
+  max-width: 1920px;
 }
 
 .board-list {
