added dropdown click event on add task category

--- a/assets/templates/add-task-template.html
+++ b/assets/templates/add-task-template.html
@@ -188,9 +188,9 @@
               </div>
               <div class="assign-selector">
                 <div
-                  id="assign-default-option"
+                  id="assign-category-default-option"
                   class="assign-default-option"
-                  onclick="showCategories()"
+                  
                 >
                   <div id="category-default-option" class="default-option">
                     Select Task Category
