--- a/styles/dialog.css
+++ b/styles/dialog.css
@@ -311,6 +311,11 @@
   cursor: pointer;
 }
 
+.btn:disabled {
+  background-color: #cccccc;
+  cursor: not-allowed;
+}
+
 .delete {
   background-color: #ffffff;
   color: #333;
