working on error messages on add contact

--- a/styles/dialog.css
+++ b/styles/dialog.css
@@ -316,6 +316,11 @@
   cursor: not-allowed;
 }
 
+.btn-create:disabled {
+  background-color: #cccccc;
+  cursor: not-allowed;
+}
+
 .delete {
   background-color: #ffffff;
   color: #333;
