--- a/styles/board.css
+++ b/styles/board.css
@@ -171,6 +171,12 @@
   transition: background-color 0.2s ease;
 }
 
+.board-task-body {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
 .board-task:hover {
   background-color: #e8e8e889;
 }
@@ -334,4 +340,22 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.btn-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 8px;
+}
+
+.btn-container button {
+  width: 70%;
+}
+
+.dialog-move-task {
+  display: flex;
+  flex-direction: column;
+  
+  gap: 24px;
 }
